# sealed-typestate

./: Cargo.toml  LICENSE-APACHE2  LICENSE-MIT
.github/workflows/: build-and-test.yml
src/: lib.rs
tests/: 03-default-sealed-trait-does-not-exist.stderr  03-default-sealed-trait-doesn't-exist.rs  03-default-sealed-trait-doesn't-exist.stderr  04-specified-sealed-trait-does-not-exist.stderr  04-specified-sealed-trait-doesn't-exist.rs  04-specified-sealed-trait-doesn't-exist.stderr
tests/compile-tests/: 01-default-sealed-trait.rs  02-specified-sealed-trait.rs  03-default-sealed-trait-does-not-exist.stderr  03-in-place-declared-sealed-trait.rs  04-default-sealed-trait-does-not-exist.rs  04-default-sealed-trait-does-not-exist.stderr  04-specified-sealed-trait-does-not-exist.stderr  05-specified-sealed-trait-does-not-exist.stderr
